--- a/app-favorites.html
+++ b/app-favorites.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -14,13 +15,13 @@
 <body>
 
     <header>
-        <div class="sticky">
+
         <nav>
 
 
             <div class="nav-container">
 
-                <img src="images/LOGO.png" alt="logo" width="100" height="65">
+                <img src="images/LOGO.png" alt="logo">
 
                 <a href="app-favorites.html">Accueil</a>
                 <a href="app1.html">Tik Tok</a>
@@ -28,7 +29,6 @@
                 <a href="app3.html">Youtube</a>
             </div>
         </nav>
-        </div>
     </header>
 
 
@@ -41,86 +41,84 @@
 
 
         <section class="tik-container">
-                <div>
-                    <img src="images/tiktok.png" alt="tiktok" width="700 height="800">
-                </div>
+            <div>
+                <img src="images/tiktok.png" alt="tiktok">
+            </div>
 
-                <div class="tik">
-                    <p>
-                        TikTok est une application mobile de partage de vidéo et de réseautage social lancée en
-                        septembre
-                        2016.
-                        Elle est développée par l'entreprise chinoise ByteDance comme le pendant de l'application Douyin
-                        pour le marché non chinois (chinois : 抖音短视频 ; pinyin : Dǒuyīn duǎnshìpín ; litt.
-                        « courte vidéo vibrato »)1,2,3. Son logo évoque une note de musique.
-                        ByteDance, entreprise de technologie numérique fondée en 2012 par Zhang Yiming et domiciliée à
-                        Pékin,
-                        lance en septembre 2016 Douyin, une application mobile de partage de vidéos courtes pour le
-                        marché
-                        chinois.
-                    </p>
-                    <button>En savoir plus</button>
-                </div>
+            <div class="tik">
+                <p>
+                    TikTok est une application mobile de partage de vidéo et de réseautage social lancée en
+                    septembre
+                    2016.
+                    Elle est développée par l'entreprise chinoise ByteDance comme le pendant de l'application Douyin
+                    pour le marché non chinois (chinois : 抖音短视频 ; pinyin : Dǒuyīn duǎnshìpín ; litt.
+                    « courte vidéo vibrato »)1,2,3. Son logo évoque une note de musique.
+                    ByteDance, entreprise de technologie numérique fondée en 2012 par Zhang Yiming et domiciliée à
+                    Pékin,
+                    lance en septembre 2016 Douyin, une application mobile de partage de vidéos courtes pour le
+                    marché
+                    chinois.
+                </p>
+                <button>En savoir plus</button>
+            </div>
         </section>
 
         <section class="wec-container">
-                <div class="wec">
-                    <p>
-                        WeChat [wiˈtʃæt]1 ou Weixin (chinois : 微信 ; pinyin : Wēixìn ; litt. « micro-message »
-                        [u̯eɪ̯˥ ɕin˥˩]2 Écouter) est une application mobile de messagerie textuelle et vocale développée
-                        par le géant chinois Tencent Holdings Limited. Elle permet également les appels audio et vidéo.
-                        L'application est très populaire en Chine et compte plus d'un milliard de comptes dans le monde
-                        en
-                        mars
-                        20183.
-                        Elle est disponible dans d'autres langues depuis avril 2012, date du lancement en dehors de la
-                        Chine.
-                        Weixin est le nom chinois de l'application lancée par l'entreprise Internet chinoise Tencent.
-                        Son expansion en 2013 à l'international comprend l'Inde notamment4. L’application génère
-                        maintenant
-                        700 millions d’activités de géolocalisation par jour.
-                    </p>
-                    <button>En savoir plus</button>
+            <div class="wec">
+                <p>
+                    WeChat [wiˈtʃæt]1 ou Weixin (chinois : 微信 ; pinyin : Wēixìn ; litt. « micro-message »
+                    [u̯eɪ̯˥ ɕin˥˩]2 Écouter) est une application mobile de messagerie textuelle et vocale développée
+                    par le géant chinois Tencent Holdings Limited. Elle permet également les appels audio et vidéo.
+                    L'application est très populaire en Chine et compte plus d'un milliard de comptes dans le monde
+                    en mars 20183.
+                    Elle est disponible dans d'autres langues depuis avril 2012, date du lancement en dehors de la
+                    Chine.
+                    Weixin est le nom chinois de l'application lancée par l'entreprise Internet chinoise Tencent.
+                    Son expansion en 2013 à l'international comprend l'Inde notamment4. L’application génère
+                    maintenant
+                    700 millions d’activités de géolocalisation par jour.
+                </p>
+                <button>En savoir plus</button>
 
-                </div>
+            </div>
 
 
-                <div>
-                    <img src="images/wechat.png" alt="wechat" width="700 height="800">
-                </div>
+            <div>
+                <img src="images/wechat.png" alt="wechat">
+            </div>
         </section>
 
         <section class="you-container">
-                <article>
-                    <img src="images/youtube.png" alt="youtube" width="700" height="800">
-                </article>
+            <article>
+                <img src="images/youtube.png" alt="youtube">
+            </article>
 
-                    <article class="you">
-                    <p>
-                        YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web
-                        d’hébergement
-                        de
-                        vidéos et un média social sur lequel les utilisateurs peuvent envoyer, regarder, commenter,
-                        évaluer
-                        et partager
-                        des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, Chad Hurley et Jawed
-                        Karim,
-                        trois anciens
-                        employés de PayPal, et racheté par Google en octobre 2006 pour 1,65 milliard de dollars. Le
-                        service
-                        est situé à San Bruno,
-                        en Californie.
-                        En 2009, environ 350 millions de personnes visitent chaque mois ce site9. Le 28 octobre 2010,
-                        l'ensemble
-                        des chaînes de YouTube atteint le milliard d'abonnés10. En 2020, chaque mois, YouTube compte
-                        plus de
-                        2 milliards
-                        d'utilisateurs connectés.
-                    </p>
-                    <button>En savoir plus</button>
+            <article class="you">
+                <p>
+                    YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web
+                    d’hébergement
+                    de
+                    vidéos et un média social sur lequel les utilisateurs peuvent envoyer, regarder, commenter,
+                    évaluer
+                    et partager
+                    des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, Chad Hurley et Jawed
+                    Karim,
+                    trois anciens
+                    employés de PayPal, et racheté par Google en octobre 2006 pour 1,65 milliard de dollars. Le
+                    service
+                    est situé à San Bruno,
+                    en Californie.
+                    En 2009, environ 350 millions de personnes visitent chaque mois ce site9. Le 28 octobre 2010,
+                    l'ensemble
+                    des chaînes de YouTube atteint le milliard d'abonnés10. En 2020, chaque mois, YouTube compte
+                    plus de
+                    2 milliards
+                    d'utilisateurs connectés.
+                </p>
+                <button>En savoir plus</button>
 
-                </article>
-            </section>
+            </article>
+        </section>
 
 
     </main>
