--- a/app1.html
+++ b/app1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="app1.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Utilisation de main</title>
+    <title>app1</title>
 </head>
 
 
@@ -42,7 +42,7 @@
 
             <div class="tik">
                 <h1>
-                    J'ADORE...TIKTOK
+                    TIK.DANCE.TOK
                 </h1>
                 <a href="https://laplateforme.io/" class="bouton1"> --> En savoir plus </a>
 
