--- a/app1.html
+++ b/app1.html
@@ -48,14 +48,17 @@
 
             </div>
         </section>
-        
+
 
         <section>
 
             <p>
-                TikTok est une application mobile de partage de vidéo et de réseautage social lancée en septembre 2016. Elle est développée par l'entreprise chinoise ByteDance <br />
-                comme le pendant de l'application Douyin pour le marché non chinois (chinois : 抖音短视频 ; pinyin : Dǒuyīn duǎnshìpín ; litt. « courte vidéo vibrato »)1,2,3. Son <br />
-                logo évoque une note de musique. ByteDance, entreprise de technologie numérique fondée en 2012 par Zhang Yiming et domiciliée à Pékin, lance en septembre 2016 Douyin, <br />
+                TikTok est une application mobile de partage de vidéo et de réseautage social lancée en septembre 2016.
+                Elle est développée par l'entreprise chinoise ByteDance <br />
+                comme le pendant de l'application Douyin pour le marché non chinois (chinois : 抖音短视频 ; pinyin : Dǒuyīn
+                duǎnshìpín ; litt. « courte vidéo vibrato »)1,2,3. Son <br />
+                logo évoque une note de musique. ByteDance, entreprise de technologie numérique fondée en 2012 par Zhang
+                Yiming et domiciliée à Pékin, lance en septembre 2016 Douyin, <br />
                 une application mobile de partage de vidéos courtes pour le marché chinois. <br />
             </p>
 
@@ -82,7 +85,7 @@
         <section class="align">
 
             <article>
-            <h1>POURQUOI VOUS DEVRIEZ AIMER TIKTOK ?</h1>
+                <h1>POURQUOI VOUS DEVRIEZ AIMER TIKTOK ?</h1>
             </article>
             <a href="https://laplateforme.io/" class="bouton2">Venez découvrir ! </a>
             <img src="images/loti.png" alt="">
