update mise en page

--- a/app-favorites.html
+++ b/app-favorites.html
@@ -38,6 +38,12 @@
         <section class="noir">
             <img src="images/acceuil.png" alt="acceuil">
         </section>
+        
+        <section class="acimage-container">
+         <img src="images/pet.jpeg" alt="">
+          <img src="images/peq.jpg" alt="">
+        </section>
+
 
 
         <section class="tik-container">
@@ -63,6 +69,11 @@
             </div>
         </section>
 
+          <section class="acimage1-container">
+            <img src="images/pewj.jpg" alt="">
+             <img src="images/pew.png" alt="">
+           </section>
+
         <section class="wec-container">
             <div class="wec">
                 <p>
@@ -87,6 +98,12 @@
                 <img src="images/wechat.png" alt="wechat">
             </div>
         </section>
+
+          <section class="acimage2-container">
+            
+            <img src="images/pey.jpg" alt="">
+            <img src="images/peya.jpg" alt="">
+           </section>
 
         <section class="you-container">
             <article>
