Mega update taille d'image resize

--- a/app-favorites.html
+++ b/app-favorites.html
@@ -39,9 +39,15 @@
             <img src="images/acceuil.png" alt="acceuil">
         </section>
         
+
+
         <section class="acimage-container">
-         <img src="images/pet.jpeg" alt="">
-          <img src="images/peq.jpg" alt="">
+            <div>
+         <img src="images/ap11.jpg" alt="">
+           </div>
+           <div>
+          <img src="images/ap12.jpg" alt="">
+          </div>
         </section>
 
 
@@ -70,8 +76,12 @@
         </section>
 
           <section class="acimage1-container">
-            <img src="images/pewj.jpg" alt="">
-             <img src="images/pew.png" alt="">
+              <div>
+            <img src="images/bla1.jpg" alt="">
+            </div>
+            <div>
+             <img src="images/bla.jpg" alt="">
+            </div>
            </section>
 
         <section class="wec-container">
@@ -101,8 +111,13 @@
 
           <section class="acimage2-container">
             
-            <img src="images/pey.jpg" alt="">
-            <img src="images/peya.jpg" alt="">
+            <div>
+            <img src="images/you12.jpg" alt="">
+           </div>
+
+           <div>
+            <img src="images/you11.jpg" alt="">
+          </div>
            </section>
 
         <section class="you-container">
