--- a/app1.html
+++ b/app1.html
@@ -50,6 +50,17 @@
         </section>
 
 
+        <section class="ap-container">
+            <div>
+                <img src="images/ap1 copie.jpg" alt="">
+            </div>
+            
+            <div>
+           <img src="images/ap2 copie.jpg" alt="">
+           </div>
+        </section>
+
+
         <section>
 
             <p>
