--- a/app2.html
+++ b/app2.html
@@ -110,6 +110,17 @@
         </section>
 
 
+           <section class="wecha-container">
+            
+            <div>
+            <img src="images/wecha1.jpg" alt="">
+           </div>
+
+           <div>
+            <img src="images/wecha2.jpg" alt="">
+          </div>
+           </section>
+
 
     </main>
 
