mise a jour des fichiers ainsi que mise en page de l'app3

--- a/app-favorites.html
+++ b/app-favorites.html
@@ -23,7 +23,7 @@
 
                 <img src="images/LOGO.png" alt="logo">
 
-                <a href="app-favorites.html">Accueil</a>
+                <a href="app-favorites.html">App présentation</a>
                 <a href="app1.html">Tik Tok</a>
                 <a href="app2.html">Wechat</a>
                 <a href="app3.html">Youtube</a>
