--- a/app1.html
+++ b/app1.html
@@ -20,9 +20,9 @@
 
             <div class="nav-container">
 
-                <img src="images/LOGO.png" alt="logo">
+                <img src="images/loti.png" alt="logo">
 
-                <a href="app-favorites.html">Accueil</a>
+                <a href="app-favorites.html">App présentation</a>
                 <a href="app1.html">Tik Tok</a>
                 <a href="app2.html">Wechat</a>
                 <a href="app3.html">Youtube</a>
