--- a/app2.html
+++ b/app2.html
@@ -26,9 +26,9 @@
 
             <div class="nav-container">
 
-                <img src="images/LOGO.png" alt="logo">
+                <img src="images/lowe.png" alt="logo">
 
-                <a href="app-favorites.html">Accueil</a>
+                <a href="app-favorites.html">App présentation</a>
                 <a href="app1.html">Tik Tok</a>
                 <a href="app2.html">Wechat</a>
                 <a href="app3.html">Youtube</a>
