--- a/app3.html
+++ b/app3.html
@@ -25,9 +25,9 @@
 
             <div class="nav-container">
 
-                <img src="images/LOGO.png" alt="logo">
+                <img src="images/loyou.png" alt="logo">
 
-                <a href="app-favorites.html">Accueil</a>
+                <a href="app-favorites.html">App présentation</a>
                 <a href="app1.html">Tik Tok</a>
                 <a href="app2.html">Wechat</a>
                 <a href="app3.html">Youtube</a>
@@ -58,9 +58,43 @@
 
         </section>
 
+        <section class="rara">
+            <article>
+                    YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web d’hébergement de <br />
+                    vidéos et un média social sur lequel les utilisateurs peuvent envoyer, regarder, commenter,<br />
+                    évaluer et partager des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, Chad Hurley et Jawed<br />
+                    Karim, trois anciens employés de PayPal, et racheté par Google en octobre 2006 pour 1,65 milliard de dollars. Le<br />
+                    service est situé à San Bruno, en Californie. En 2009, environ 350 millions de personnes visitent chaque mois ce site9. <br />
+                    Le 28 octobre 2010, l'ensemble des chaînes de YouTube atteint le milliard d'abonnés10. En 2020, chaque mois, YouTube compte<br />
+                    plus de 2 milliards d'utilisateurs connectés.<br />
+            </article>
+
+            <a href="https://laplateforme.io/" class="bouton3">Venez découvrir ! </a>
+        </section>
 
 
+        <section class="youtu-container">
+            <img src="https://media.giphy.com/media/gjNpNqwG5H8oRYfZFe/giphy.gif" alt="">
+        </section>
 
+        <section class="youta-container">
+            <article>
+
+                <h1>COMMENT JE ME CONNECTE A L'APPLICATION</h1>
+
+                <div>
+                    <img src="images/ya1.PNG" alt="">
+                    <img src="images/ya2.PNG" alt="">
+                    <img src="images/ya3.PNG" alt="">
+                </div>
+
+                <div>
+                    <img src="images/ya4.PNG" alt="">
+                    <img src="images/ya5.PNG" alt="">
+                    <img src="images/ya6.PNG" alt="">
+                </div>
+            </article>
+        </section>
 
 
     </main>
