update sur toutes les pages

--- a/app-favorites.html
+++ b/app-favorites.html
@@ -38,16 +38,12 @@
         <section class="noir">
             <img src="images/acceuil.png" alt="acceuil">
         </section>
-        
 
 
-        <section class="acimage-container">
-            <div>
-         <img src="images/ap11.jpg" alt="">
-           </div>
-           <div>
-          <img src="images/ap12.jpg" alt="">
-          </div>
+
+        <section class="acimage">
+
+            <img src="images/ap12.jpg" alt="">
         </section>
 
 
@@ -75,17 +71,17 @@
             </div>
         </section>
 
-          <section class="acimage1-container">
-              <div>
-            <img src="images/bla1.jpg" alt="">
+        <section class="acimage1-container">
+            <div>
+                <img src="images/bla1.jpg" alt="">
             </div>
             <div>
-             <img src="images/bla.jpg" alt="">
+                <img src="images/ap11.jpg" alt="">
             </div>
-           </section>
+        </section>
 
         <section class="wec-container">
-            <div class="wec">
+            <article class="wec">
                 <p>
                     WeChat [wiˈtʃæt]1 ou Weixin (chinois : 微信 ; pinyin : Wēixìn ; litt. « micro-message »
                     [u̯eɪ̯˥ ɕin˥˩]2 Écouter) est une application mobile de messagerie textuelle et vocale développée
@@ -101,24 +97,30 @@
                 </p>
                 <button>En savoir plus</button>
 
-            </div>
+            </article>
 
 
-            <div>
+            <article>
                 <img src="images/wechat.png" alt="wechat">
-            </div>
+            </article>
         </section>
 
-          <section class="acimage2-container">
-            
-            <div>
-            <img src="images/you12.jpg" alt="">
-           </div>
+        <section class="acimage2-container">
 
-           <div>
-            <img src="images/you11.jpg" alt="">
-          </div>
-           </section>
+            <div>
+                <img src="images/you11.jpg" alt="">
+            </div>
+
+            <div>
+                <img src="images/you12.jpg" alt="">
+            </div>
+
+
+            <div>
+                <img src="images/tayou.jpg" alt="">
+            </div>
+
+        </section>
 
         <section class="you-container">
             <article>
