--- a/app1.html
+++ b/app1.html
@@ -35,30 +35,32 @@
 
     <main>
 
-        <section class="tik-container">
-            <div>
-                <img src="images/tiktok.png" alt="tiktok">
-            </div>
 
-            <div class="tik">
+        <section class="tik-container">
+            <article>
+                <img src="images/tiktok.png" alt="tiktok">
+            </article>
+
+            <article class="tik">
                 <h1>
                     TIK.DANCE.TOK
                 </h1>
                 <a href="https://laplateforme.io/" class="bouton1"> --> En savoir plus </a>
 
-            </div>
+            </article>
         </section>
 
 
         <section class="ap-container">
-            <div>
+            <article>
                 <img src="images/ap1 copie.jpg" alt="">
-            </div>
-            
-            <div>
-           <img src="images/ap2 copie.jpg" alt="">
-           </div>
+            </article>
+
+            <article>
+                <img src="images/ap2 copie.jpg" alt="">
+            </article>
         </section>
+
 
 
         <section>
@@ -92,6 +94,10 @@
 
             </article>
         </section>
+
+        <article class="titoo">
+            <img src="images/tita.png" alt="">
+        </article>
 
         <section class="align">
 
