--- a/app2.html
+++ b/app2.html
@@ -68,6 +68,36 @@
             <img src="images/lowe.png" alt="">
 
 
+            <section>
+                <article class="gaa-container">
+                    <div><img src="images/chawe1.jpg" alt=""></div>
+                    <div><img src="images/chawe2.jpg" alt=""></div>
+                </article>
+
+
+                <article class="goo-container">
+                    <div><img src="images/chawe3.jpg" alt=""></div>
+
+                    <div>
+                        <p>
+
+                            Plus qu’une application de messagerie et de médias sociaux, WeChat est un véritable mode de
+                            vie pour plus d’un milliard <br />
+                            d’utilisateurs dans le monde. Discutez, passez des appels, suivez l’actualité, utilisez des
+                            services locaux avec les <br />
+                            Comptes officiels et les Mini-programmes, jouez à des jeux passionnants avec vos amis,
+                            profitez des fonctions de <br />
+                            paiement mobile (WeChat Pay) et bien plus encore.<br />
+                        </p>
+
+
+                    </div>
+
+                </article>
+
+            </section>
+
+
         </section>
 
         <section class="chacha-container">
@@ -93,33 +123,39 @@
 
         <section class="fin">
             <article>
-                WeChat [wiˈtʃæt]1 ou Weixin (chinois : 微信 ; pinyin : Wēixìn ; litt. « micro-message » [u̯eɪ̯˥ ɕin˥˩]2
-                Écouter) est une application mobile <br />
-                de messagerie textuelle et vocale développée par le géant chinois Tencent Holdings Limited. Elle permet
-                également les appels audio et vidéo. <br />
-                L'application est très populaire en Chine et compte plus d'un milliard de comptes dans le monde en mars
-                20183. Elle est disponible dans<br />
-                d'autres langues depuis avril 2012, date du lancement en dehors de la Chine. Weixin est le nom chinois
-                de l'application lancée par <br />
-                l'entreprise Internet chinoise Tencent. Son expansion en 2013 à l'international comprend l'Inde
-                notamment4. L’application génère maintenant <br />
-                700 millions d’activités de géolocalisation par jour.<br />
+                <p>
+                    WeChat [wiˈtʃæt]1 ou Weixin (chinois : 微信 ; pinyin : Wēixìn ; litt. « micro-message » [u̯eɪ̯˥
+                    ɕin˥˩]2
+                    Écouter) est une application mobile <br />
+                    de messagerie textuelle et vocale développée par le géant chinois Tencent Holdings Limited. Elle
+                    permet
+                    également les appels audio et vidéo. <br />
+                    L'application est très populaire en Chine et compte plus d'un milliard de comptes dans le monde en
+                    mars
+                    20183. Elle est disponible dans<br />
+                    d'autres langues depuis avril 2012, date du lancement en dehors de la Chine. Weixin est le nom
+                    chinois
+                    de l'application lancée par <br />
+                    l'entreprise Internet chinoise Tencent. Son expansion en 2013 à l'international comprend l'Inde
+                    notamment4. L’application génère maintenant <br />
+                    700 millions d’activités de géolocalisation par jour.<br />
+                </p>
             </article>
 
             <a href="https://laplateforme.io/" class="bouton3">Venez découvrir ! </a>
         </section>
 
 
-           <section class="wecha-container">
-            
-            <div>
-            <img src="images/wecha1.jpg" alt="">
-           </div>
+        <section class="wecha-container">
 
-           <div>
-            <img src="images/wecha2.jpg" alt="">
-          </div>
-           </section>
+            <div>
+                <img src="images/wecha1.jpg" alt="">
+            </div>
+
+            <div>
+                <img src="images/wecha2.jpg" alt="">
+            </div>
+        </section>
 
 
     </main>
