--- a/app3.html
+++ b/app3.html
@@ -47,9 +47,9 @@
 
             <div class="you">
                 <h1>
-                    ON S'AMBIANCE ?
+                    ON S'AMBIANCE 
                 </h1>
-                <a href="https://laplateforme.io/" class="bouton1"> --> En savoir plus </a>
+                <a href="https://laplateforme.io/" class="bouton1">plus ?</a>
 
             </div>
             <div>
@@ -58,22 +58,41 @@
 
         </section>
 
-        <section class="rara">
+
+
+        <section class="rara-container">
+
             <article>
-                    YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web d’hébergement de <br />
-                    vidéos et un média social sur lequel les utilisateurs peuvent envoyer, regarder, commenter,<br />
-                    évaluer et partager des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, Chad Hurley et Jawed<br />
-                    Karim, trois anciens employés de PayPal, et racheté par Google en octobre 2006 pour 1,65 milliard de dollars. Le<br />
-                    service est situé à San Bruno, en Californie. En 2009, environ 350 millions de personnes visitent chaque mois ce site9. <br />
-                    Le 28 octobre 2010, l'ensemble des chaînes de YouTube atteint le milliard d'abonnés10. En 2020, chaque mois, YouTube compte<br />
-                    plus de 2 milliards d'utilisateurs connectés.<br />
+                <img src="images/yougo.png" alt="">
             </article>
 
-            <a href="https://laplateforme.io/" class="bouton3">Venez découvrir ! </a>
+            <article>
+                <p>
+                    YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web d’hébergement
+                    de <br />
+                    vidéos et un média social sur lequel les utilisateurs peuvent envoyer, regarder, commenter,<br />
+                    évaluer et partager des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, Chad
+                    Hurley et Jawed<br />
+                    Karim, trois anciens employés de PayPal, et racheté par Google en octobre 2006 pour 1,65 milliard de
+                    dollars. Le<br />
+                    service est situé à San Bruno, en Californie. En 2009, environ 350 millions de personnes visitent
+                    chaque mois ce site9. <br />
+                    Le 28 octobre 2010, l'ensemble des chaînes de YouTube atteint le milliard d'abonnés10. En 2020,
+                    chaque mois, YouTube compte<br />
+                    plus de 2 milliards d'utilisateurs connectés.<br />
+                </p>
+
+                <a href="https://laplateforme.io/" class="bouton3">TELECHARGE</a>
+            
+            </article>
+            <article>
+                <img src="images/youga.png" alt="">
+            </article>
+
         </section>
 
 
-        <section class="youtu-container">
+        <section class="youtu">
             <img src="https://media.giphy.com/media/gjNpNqwG5H8oRYfZFe/giphy.gif" alt="">
         </section>
 
