update app presentation et page tiktok

--- a/app-favorites.html
+++ b/app-favorites.html
@@ -16,10 +16,9 @@
 
     <header>
 
-        <nav>
+        <nav class="nav-container">
 
 
-            <div class="nav-container">
 
                 <img src="images/LOGO.png" alt="logo">
 
@@ -27,7 +26,6 @@
                 <a href="app1.html">Tik Tok</a>
                 <a href="app2.html">Wechat</a>
                 <a href="app3.html">Youtube</a>
-            </div>
         </nav>
     </header>
 
@@ -43,14 +41,14 @@
 
         <section class="acimage">
 
-            <img src="images/ap12.jpg" alt="">
+            <img src="images/ap12.jpg" alt="tiktokimage">
         </section>
 
 
 
         <section class="tik-container">
             <div>
-                <img src="images/tiktok.png" alt="tiktok">
+                <img src="images/test2.png" alt="tiktok">
             </div>
 
             <div class="tik">
@@ -67,16 +65,18 @@
                     marché
                     chinois.
                 </p>
-                <button>En savoir plus</button>
+                <a href="https://play.google.com/store/apps/details?id=com.downloaderfor.tiktok&hl=fr" target="blank" class="boutolo">Android</a>
+                <a href="https://apps.apple.com/fr/app/tiktok/id835599320" target="blank" class="boutolo">Apple</a>
+
             </div>
         </section>
 
         <section class="acimage1-container">
             <div>
-                <img src="images/bla1.jpg" alt="">
+                <img src="images/bla1.jpg" alt="wechatimage">
             </div>
             <div>
-                <img src="images/ap11.jpg" alt="">
+                <img src="images/ap11.jpg" alt="wechatimage">
             </div>
         </section>
 
@@ -95,36 +95,37 @@
                     maintenant
                     700 millions d’activités de géolocalisation par jour.
                 </p>
-                <button>En savoir plus</button>
+                <a href="https://play.google.com/store/apps/details?id=com.tencent.mm&hl=fr" target="blank" class="boutolo">Android</a>
+                <a href="https://apps.apple.com/fr/app/wechat/id414478124" target="blank" class="boutolo">Apple</a>
 
             </article>
 
 
             <article>
-                <img src="images/wechat.png" alt="wechat">
+                <img src="images/tewtwe.png" alt="wechat">
             </article>
         </section>
 
         <section class="acimage2-container">
 
             <div>
-                <img src="images/you11.jpg" alt="">
+                <img src="images/you11.jpg" alt="youtubeimage">
             </div>
 
             <div>
-                <img src="images/you12.jpg" alt="">
+                <img src="images/you12.jpg" alt="youtubeimage">
             </div>
 
 
             <div>
-                <img src="images/tayou.jpg" alt="">
+                <img src="images/tayou.jpg" alt="youtubeimage">
             </div>
 
         </section>
 
         <section class="you-container">
             <article>
-                <img src="images/youtube.png" alt="youtube">
+                <img src="images/test.jpg" alt="youtube">
             </article>
 
             <article class="you">
@@ -149,7 +150,8 @@
                     2 milliards
                     d'utilisateurs connectés.
                 </p>
-                <button>En savoir plus</button>
+                <a href="https://play.google.com/store/apps/details?id=com.google.android.youtube&hl=fr" target="blank" class="boutolo">Android</a>
+                <a href="https://apps.apple.com/fr/app/youtube/id544007664" target="blank" class="boutolo">Apple</a>
 
             </article>
         </section>
@@ -161,16 +163,20 @@
 
     <footer>
 
-        <div class="footer">
+        <section class="footer">
+            <div>
             <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
             <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
             <a href="https://twitter.com/login?lang=fr"><i class="fab fa-twitter"></i></a>
+          </div>
 
-            <p>
-                <a href="mailto:aicha.ouattara@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
+            <div class="reseaux">
+             <p>
+                <a href="mailto:tikweyou@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
             </p>
+          </div>
 
-        </div>
+        </section>
 
 
 
