--- a/app1.html
+++ b/app1.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="app1.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        
     <title>app1</title>
 </head>
 
@@ -15,10 +16,9 @@
 
     <header>
 
-        <nav>
+        <nav class="nav-container">
 
 
-            <div class="nav-container">
 
                 <img src="images/loti.png" alt="logo">
 
@@ -26,7 +26,6 @@
                 <a href="app1.html">Tik Tok</a>
                 <a href="app2.html">Wechat</a>
                 <a href="app3.html">Youtube</a>
-            </div>
         </nav>
     </header>
 
@@ -45,7 +44,7 @@
                 <h1>
                     TIK.DANCE.TOK
                 </h1>
-                <a href="https://laplateforme.io/" class="bouton1"> --> En savoir plus </a>
+                <a href="https://www.tiktok.com/fr/" target="blank" class="bouton1">Savoir plus</a>
 
             </article>
         </section>
@@ -53,17 +52,17 @@
 
         <section class="ap-container">
             <article>
-                <img src="images/ap1 copie.jpg" alt="">
+                <img src="images/ap1 copie.jpg" alt="tiktokimage">
             </article>
 
             <article>
-                <img src="images/ap2 copie.jpg" alt="">
+                <img src="images/ap2 copie.jpg" alt="tiktokimage">
             </article>
         </section>
 
 
 
-        <section>
+        <section class="applimo">
 
             <p>
                 TikTok est une application mobile de partage de vidéo et de réseautage social lancée en septembre 2016.
@@ -96,16 +95,18 @@
         </section>
 
         <article class="titoo">
-            <img src="images/tita.png" alt="">
+           <a href="https://play.google.com/store/apps/details?id=com.downloaderfor.tiktok&hl=fr" target="blank"><img src="images/telecharok.jpg" alt=""></a> 
         </article>
+
+
 
         <section class="align">
 
-            <article>
+            <article class="pourquoi">
                 <h1>POURQUOI VOUS DEVRIEZ AIMER TIKTOK ?</h1>
             </article>
-            <a href="https://laplateforme.io/" class="bouton2">Venez découvrir ! </a>
-            <img src="images/loti.png" alt="">
+            <a href="https://www.tiktok.com/foryou/?lang=fr" target="blank" class="bouton2">Venez découvrir ! </a>
+            <img src="images/loti.png" alt="tiktokimage">
 
 
         </section>
@@ -127,12 +128,12 @@
     <footer>
 
         <div class="footer">
-            <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
-            <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/login?lang=fr"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com/tiktok?igshid=11n03ran9lh5d" target="blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://fr-fr.facebook.com/tiktok/" target="blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="twitter.com/tiktok_france?s=11 " target="blank"><i class="fab fa-twitter"></i></a>
 
             <p>
-                <a href="mailto:aicha.ouattara@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
+                <a href="mailto:tikweyou@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
             </p>
 
         </div>
