--- a/app2.html
+++ b/app2.html
@@ -21,10 +21,9 @@
 
     <header>
 
-        <nav>
+        <nav class="nav-container">
 
 
-            <div class="nav-container">
 
                 <img src="images/lowe.png" alt="logo">
 
@@ -32,7 +31,6 @@
                 <a href="app1.html">Tik Tok</a>
                 <a href="app2.html">Wechat</a>
                 <a href="app3.html">Youtube</a>
-            </div>
         </nav>
     </header>
 
@@ -46,7 +44,7 @@
 
         <section class="we-container">
             <div class="we2">
-                <h1>VIENS TCHACHER</h1>
+                <h1>VIENS TCHATCHER</h1>
                 <a href="https://laplateforme.io/" class="bouton1">HOP</a>
             </div>
 
