--- a/app3.html
+++ b/app3.html
@@ -20,10 +20,9 @@
 
     <header>
 
-        <nav>
+        <nav class="nav-container">
 
 
-            <div class="nav-container">
 
                 <img src="images/loyou.png" alt="logo">
 
@@ -31,7 +30,6 @@
                 <a href="app1.html">Tik Tok</a>
                 <a href="app2.html">Wechat</a>
                 <a href="app3.html">Youtube</a>
-            </div>
         </nav>
     </header>
 
