update avec les dernieres pages

--- a/app2.html
+++ b/app2.html
@@ -45,7 +45,6 @@
         <section class="we-container">
             <div class="we2">
                 <h1>VIENS TCHATCHER</h1>
-                <a href="https://laplateforme.io/" class="bouton1">HOP</a>
             </div>
 
 
@@ -86,6 +85,9 @@
                             Comptes officiels et les Mini-programmes, jouez à des jeux passionnants avec vos amis,
                             profitez des fonctions de <br />
                             paiement mobile (WeChat Pay) et bien plus encore.<br />
+
+                            <a href="https://play.google.com/store/apps/details?id=com.tencent.mm&hl=fr" target="blank" class="boutola">Android</a>
+                            <a href="https://apps.apple.com/fr/app/wechat/id414478124" target="blank" class="boutola">Apple</a>
                         </p>
 
 
@@ -120,7 +122,7 @@
 
 
         <section class="fin">
-            <article>
+            <article class="fintext">
                 <p>
                     WeChat [wiˈtʃæt]1 ou Weixin (chinois : 微信 ; pinyin : Wēixìn ; litt. « micro-message » [u̯eɪ̯˥
                     ɕin˥˩]2
