--- a/app3.html
+++ b/app3.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="app3.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Carter+One&display=swap" rel="stylesheet">
+
     <title>app3</title>
 </head>
 
@@ -66,18 +68,12 @@
 
             <article>
                 <p>
-                    YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web d’hébergement
-                    de <br />
-                    vidéos et un média social sur lequel les utilisateurs peuvent envoyer, regarder, commenter,<br />
-                    évaluer et partager des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, Chad
-                    Hurley et Jawed<br />
-                    Karim, trois anciens employés de PayPal, et racheté par Google en octobre 2006 pour 1,65 milliard de
-                    dollars. Le<br />
-                    service est situé à San Bruno, en Californie. En 2009, environ 350 millions de personnes visitent
-                    chaque mois ce site9. <br />
-                    Le 28 octobre 2010, l'ensemble des chaînes de YouTube atteint le milliard d'abonnés10. En 2020,
-                    chaque mois, YouTube compte<br />
-                    plus de 2 milliards d'utilisateurs connectés.<br />
+                    YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web d’hébergement de vidéos et un média social sur lequel <br />
+                    les utilisateurs peuvent envoyer, regarder, commenter, évaluer et partager des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, <br />
+                    Chad Hurley et Jawed Karim, trois anciens employés de PayPal, et racheté par Google en octobre 2006 pour 1,65 milliard de<br />
+                    dollars. Le service est situé à San Bruno, en Californie. En 2009, environ 350 millions de personnes visitent<br />
+                    chaque mois ce site9. Le 28 octobre 2010, l'ensemble des chaînes de YouTube atteint le milliard d'abonnés10. En 2020,<br />
+                    chaque mois, YouTube compte plus de 2 milliards d'utilisateurs connectés.<br />
                 </p>
 
                 <a href="https://laplateforme.io/" class="bouton3">TELECHARGE</a>
