mise en page des html et css

--- a/app1.html
+++ b/app1.html
@@ -127,7 +127,7 @@
 
     <footer>
 
-        <div class="footer">
+        <section class="footer">
             <a href="https://instagram.com/tiktok?igshid=11n03ran9lh5d" target="blank"><i class="fab fa-instagram"></i></a>
             <a href="https://fr-fr.facebook.com/tiktok/" target="blank"><i class="fab fa-facebook-f"></i></a>
             <a href="twitter.com/tiktok_france?s=11 " target="blank"><i class="fab fa-twitter"></i></a>
@@ -136,7 +136,7 @@
                 <a href="mailto:tikweyou@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
             </p>
 
-        </div>
+        </section>
 
 
 
