--- a/app2.html
+++ b/app2.html
@@ -62,18 +62,18 @@
             <article>
                 <h1>AVEC WECHAT ON PEUT PRESQUE TOUT FAIRE ?</h1>
             </article>
-            <img src="images/lowe.png" alt="">
+            <img src="images/lowe.png" alt="wechat">
 
 
             <section>
                 <article class="gaa-container">
-                    <div><img src="images/chawe1.jpg" alt=""></div>
-                    <div><img src="images/chawe2.jpg" alt=""></div>
+                    <div><img src="images/chawe1.jpg" alt="wechat"></div>
+                    <div><img src="images/chawe2.jpg" alt="wechat"></div>
                 </article>
 
 
                 <article class="goo-container">
-                    <div><img src="images/chawe3.jpg" alt=""></div>
+                    <div><img src="images/chawe3.jpg" alt="wechat"></div>
 
                     <div>
                         <p>
@@ -106,15 +106,15 @@
                 <h1>COMMENT JE ME CONNECTE A L'APPLICATION</h1>
 
                 <div>
-                    <img src="images/cha1.PNG" alt="">
-                    <img src="images/cha2.PNG" alt="">
-                    <img src="images/cha3.PNG" alt="">
+                    <img src="images/cha1.PNG" alt="wechat">
+                    <img src="images/cha2.PNG" alt="wechat">
+                    <img src="images/cha3.PNG" alt="wechat">
                 </div>
 
                 <div>
-                    <img src="images/cha4.PNG" alt="">
-                    <img src="images/cha5.PNG" alt="">
-                    <img src="images/cha6.PNG" alt="">
+                    <img src="images/cha4.PNG" alt="wechat">
+                    <img src="images/cha5.PNG" alt="wechat">
+                    <img src="images/cha6.PNG" alt="wechat">
                 </div>
             </article>
         </section>
@@ -142,18 +142,18 @@
                 </p>
             </article>
 
-            <a href="https://laplateforme.io/" class="bouton3">Venez découvrir ! </a>
+            <a href="https://www.ladn.eu/tech-a-suivre/pourquoi-sinteresser-wechat-superappli/" target="blank" class="bouton3">Venez découvrir ! </a>
         </section>
 
 
         <section class="wecha-container">
 
             <div>
-                <img src="images/wecha1.jpg" alt="">
+                <img src="images/wecha1.jpg" alt="wechat">
             </div>
 
             <div>
-                <img src="images/wecha2.jpg" alt="">
+                <img src="images/wecha2.jpg" alt="wechat">
             </div>
         </section>
 
@@ -170,16 +170,14 @@
 
     <footer>
 
-        <div class="footer">
-            <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
-            <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/login?lang=fr"><i class="fab fa-twitter"></i></a>
-
+        <section class="footer">
+            <a href="https://www.facebook.com/wechatapp/" target="blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="twitter.com/wechatapp?s=11" target="blank"><i class="fab fa-twitter"></i></a>
             <p>
-                <a href="mailto:aicha.ouattara@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
+                <a href="mailto:aicha.ouattara@laplateforme.io" target="blank">Contactez-nous</a> / © Tikweyou Tous droits réservés.
             </p>
 
-        </div>
+        </section>
 
 
 
