--- a/app3.html
+++ b/app3.html
@@ -49,7 +49,7 @@
                 <h1>
                     ON S'AMBIANCE 
                 </h1>
-                <a href="https://laplateforme.io/" class="bouton1">plus ?</a>
+                <a href="https://www.youtube.com/c/grafikart/playlists" target="blank">plus ?</a>
 
             </div>
             <div>
@@ -63,10 +63,10 @@
         <section class="rara-container">
 
             <article>
-                <img src="images/yougo.png" alt="">
+                <img src="images/yougo.png" alt="youtube">
             </article>
 
-            <article>
+            <article >
                 <p>
                     YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web d’hébergement de vidéos et un média social sur lequel <br />
                     les utilisateurs peuvent envoyer, regarder, commenter, évaluer et partager des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, <br />
@@ -76,18 +76,18 @@
                     chaque mois, YouTube compte plus de 2 milliards d'utilisateurs connectés.<br />
                 </p>
 
-                <a href="https://laplateforme.io/" class="bouton3">TELECHARGE</a>
+                <a href="https://apps.apple.com/fr/app/youtube/id544007664" target="blank">TELECHARGER</a>
             
             </article>
             <article>
-                <img src="images/youga.png" alt="">
+                <img src="images/youga.png" alt="youtube">
             </article>
 
         </section>
 
 
         <section class="youtu">
-            <img src="https://media.giphy.com/media/gjNpNqwG5H8oRYfZFe/giphy.gif" alt="">
+          <a href="https://play.google.com/store/apps/details?id=com.google.android.youtube&hl=fr" target="blank" ><img src="https://media.giphy.com/media/gjNpNqwG5H8oRYfZFe/giphy.gif" target="blank"  alt="youtube"></a> 
         </section>
 
         <section class="youta-container">
@@ -96,15 +96,15 @@
                 <h1>COMMENT JE ME CONNECTE A L'APPLICATION</h1>
 
                 <div>
-                    <img src="images/ya1.PNG" alt="">
-                    <img src="images/ya2.PNG" alt="">
-                    <img src="images/ya3.PNG" alt="">
+                    <img src="images/ya1.PNG" alt="youtube">
+                    <img src="images/ya2.PNG" alt="youtube">
+                    <img src="images/ya3.PNG" alt="youtube">
                 </div>
 
-                <div>
-                    <img src="images/ya4.PNG" alt="">
-                    <img src="images/ya5.PNG" alt="">
-                    <img src="images/ya6.PNG" alt="">
+                 <div>
+                    <img src="images/ya4.PNG" alt="youtube">
+                    <img src="images/ya5.PNG" alt="youtube">
+                    <img src="images/ya6.PNG" alt="youtube">
                 </div>
             </article>
         </section>
@@ -117,16 +117,17 @@
 
     <footer>
 
-        <div class="footer">
-            <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
-            <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/login?lang=fr"><i class="fab fa-twitter"></i></a>
+        <section class="footer">
+             <div>
+            <a href="https://www.instagram.com/youtube/?hl=fr" target="blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/youtube/" target="blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="twitter.com/youtube?s=11 " target="blank" ><i class="fab fa-twitter"></i></a>
+           </div>
 
-            <p>
-                <a href="mailto:aicha.ouattara@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
-            </p>
-
-        </div>
+           <div>
+                <a href="mailto:tikweyou@laplateforme.io" target="blank">Contactez-nous</a> / © Tikweyou Tous droits réservés.
+          </div>
+        </section>
 
 
 
